<resources>
    <string name="app_name">q2</string>

    <!-- Numbers -->
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="number_zero">0</string>

    <!-- Symbols -->
    <string name="symbol_plus">+</string>
    <string name="symbol_minus">-</string>
    <string name="symbol_divide">/</string>
    <string name="symbol_multiply">*</string>
    <string name="symbol_decimal">.</string>
    <string name="symbol_equal">=</string>
    <string name="symbol_mod">%</string>
    <string name="symbol_open_parenthesis">(</string>
    <string name="symbol_close_parenthesis">)</string>

    <!-- Clear Button -->
    <string name="clr">clr</string>
</resources>
